add positive tests too
Test handlers on good values

Signed-off-by: Matthew Khouzam <matthew.khouzam@ericsson.com>